--- a/scss/main.scss
+++ b/scss/main.scss
@@ -923,7 +923,7 @@
   width: 100%;
   height: 100% !important;
   transition: all 0.3s ease-in-out;
-  padding: 0 20px 0 30px;
+  padding: 20px ;
   border-radius: 20px;
   overflow: hidden;
 }
