--- a/scss/main.scss
+++ b/scss/main.scss
@@ -921,7 +921,7 @@
 
 #col-2 {
   width: 100%;
-  height: 100% !important;
+  height: calc(100% - 50px)!important;
   transition: all 0.3s ease-in-out;
   padding: 20px ;
   border-radius: 20px;
