--- a/static/style.css
+++ b/static/style.css
@@ -1019,7 +1019,7 @@ ul {
 
 #col-2 {
   width: 100%;
-  height: 100% !important;
+  height: calc(100% - 50px) !important;
   transition: all 0.3s ease-in-out;
   padding: 20px;
   border-radius: 20px;
