--- a/scss/_stanadard.scss
+++ b/scss/_stanadard.scss
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200&display=swap");
-
+$mobile-screen: var(--mobile-screen);
 $white: var(--white);
 $black: var(--black);
 $bg-color: var(--bg-color);
@@ -18,6 +18,7 @@ $textColor: var(--textColor);
   --qustionBorder: #1777ff;
   --qustionHoverBg: #1778ff55;
   --rem: 16;
+  --mobile-screen: 767px;
 }
 
 html,
@@ -179,6 +180,6 @@ ul {
 .hide-arrow {
   &:after,
   &:before {
-    content: unset!important;
+    content: unset !important;
   }
 }
