--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1151,25 +1151,27 @@
 
 #col-2 {
   max-width: 50%;
-  height: calc(100% - 50px) !important;
+  height: calc(100% - 1px) !important;
   transition: all 0.3s ease-in-out;
   padding: 20px 30px;
   border-radius: 20px;
   overflow: hidden;
   flex: 1;
   @media (max-width: 767px) {
-    display: none;
+    max-width: 100%;
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: 96px;
+    left: 0;
+    right: 0;
+  }
+  &.active {
+    @media (max-width: 767px) {
+      height: calc(100vh - 96px)!important;
+    }
   }
 }
-#col-2.active {
-  //   width: 750px;
-}
-
-#col-2 #pdf {
-  height: calc(100% - 1px);
-  width: 100%;
-}
-
 #col-2 #pdf embed {
   width: 100%;
   height: 100%;
