--- a/static/style.css
+++ b/static/style.css
@@ -1283,7 +1283,7 @@ ul {
 
 #col-2 {
   max-width: 50%;
-  height: calc(100% - 50px) !important;
+  height: calc(100% - 1px) !important;
   transition: all 0.3s ease-in-out;
   padding: 20px 30px;
   border-radius: 20px;
@@ -1292,13 +1292,19 @@ ul {
 }
 @media (max-width: 767px) {
   #col-2 {
-    display: none;
+    max-width: 100%;
+    width: 100%;
+    height: 0;
+    position: absolute;
+    top: 96px;
+    left: 0;
+    right: 0;
   }
 }
-
-#col-2 #pdf {
-  height: calc(100% - 1px);
-  width: 100%;
+@media (max-width: 767px) {
+  #col-2.active {
+    height: calc(100vh - 96px) !important;
+  }
 }
 
 #col-2 #pdf embed {
