--- a/static/style.css
+++ b/static/style.css
@@ -1283,7 +1283,7 @@ ul {
 
 #col-2 {
   max-width: 50%;
-  height: calc(100% - 1px) !important;
+  height: calc(100% - 1px);
   transition: all 0.3s ease-in-out;
   padding: 20px 30px;
   border-radius: 20px;
@@ -1299,6 +1299,8 @@ ul {
     top: 96px;
     left: 0;
     right: 0;
+    z-index: 9;
+    padding: 0;
   }
 }
 @media (max-width: 767px) {
