--- a/scss/main.scss
+++ b/scss/main.scss
@@ -600,7 +600,7 @@
       display: flex;
       align-items: center;
       gap: 12px;
-      max-width: 130px;
+      max-width: 170px;
       @media (max-width: 480px) {
         justify-content: space-between;
         max-width: 100%;
@@ -1188,15 +1188,15 @@
   overflow: hidden;
   flex: 1;
   @media (max-width: 767px) {
-    max-width: 100%;
-    width: 100%;
+    max-width: calc(100% - 60px);
+    width: calc(100% - 60px);
     height: 0;
     position: absolute;
     top: 96px;
-    left: 0;
     right: 0;
     z-index: 9;
     padding: 0;
+    padding-right: 7px;
   }
   &.active {
     @media (max-width: 767px) {
@@ -1205,7 +1205,7 @@
   }
 }
 #col-2 #pdf embed {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
