--- a/static/style.css
+++ b/static/style.css
@@ -732,7 +732,7 @@ ul {
   display: flex;
   align-items: center;
   gap: 12px;
-  max-width: 130px;
+  max-width: 170px;
 }
 @media (max-width: 480px) {
   .right-div .header-div .down-load-wrapper {
@@ -1321,15 +1321,15 @@ ul {
 }
 @media (max-width: 767px) {
   #col-2 {
-    max-width: 100%;
-    width: 100%;
+    max-width: calc(100% - 60px);
+    width: calc(100% - 60px);
     height: 0;
     position: absolute;
     top: 96px;
-    left: 0;
     right: 0;
     z-index: 9;
     padding: 0;
+    padding-right: 7px;
   }
 }
 @media (max-width: 767px) {
@@ -1339,7 +1339,7 @@ ul {
 }
 
 #col-2 #pdf embed {
-  width: 100%;
+  max-width: 100%;
   height: 100%;
 }
 
