--- a/static/style.css
+++ b/static/style.css
@@ -171,7 +171,7 @@ ul {
 #main {
   display: flex;
   flex-direction: row;
-  height: calc(100vh - 1px) !important;
+  height: calc(100% - 1px) !important;
 }
 #main .sidebar-wrapper {
   background: var(--bg-color);
@@ -669,7 +669,7 @@ ul {
 @media (max-width: 767px) {
   .right-div {
     width: calc(100% - 60px);
-    height: 100vh;
+    height: 100%;
   }
 }
 .right-div .header-div {
@@ -818,11 +818,11 @@ ul {
   background: #f6f6f6;
   width: 100%;
   border-radius: 0 0 8px 8px;
-  height: calc(100vh - 65px);
+  height: calc(100% - 65px);
 }
 @media (max-width: 767px) {
   .right-div .right-inner-div {
-    height: calc(100vh - 107px);
+    height: calc(100% - 93px);
     flex-direction: column;
   }
 }
